--- a/hackaton/things/styleitem.css
+++ b/hackaton/things/styleitem.css
@@ -5,7 +5,7 @@
 #flexCar1{
   height: 300px;
   width: 500px;
-  background-image: url('../car1.png');
+  background-image: url('../images/car1.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -13,7 +13,7 @@
 #flexCar2{
   height: 300px;
   width: 500px;
-  background-image: url('../car2.jpg');
+  background-image: url('../images/car2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
