--- a/hackathon_2/styles/style.css
+++ b/hackathon_2/styles/style.css
@@ -85,6 +85,7 @@ main{
   color: white;
   border-radius: 5px;
   transition: 0.2s;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .productsBlock:hover{
   opacity: 0.5;
@@ -126,6 +127,7 @@ main{
   width: 720px;
   height: 600px;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .statistic iframe{
   position: absolute;
@@ -147,7 +149,7 @@ main{
   width: 300px;
   height: 500px;
   background-color: rgb(50, 50, 60);
-
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .infoBlock h3{
   color: white;
@@ -179,6 +181,7 @@ main{
   margin-right: 3.5%;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .breakdown > h3{
   color: white;
