--- a/hackathon_2/styles/thingsstyle.css
+++ b/hackathon_2/styles/thingsstyle.css
@@ -13,7 +13,8 @@
   width: 65%;
   margin-left: 5%;
 }
-.car{
+/*.car{
+  position: relative;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -24,6 +25,7 @@
 }
 .car1{
   color: white;
+  position: relative;
   align-items: center;
   width: 100%;
   height: 100px;
@@ -32,12 +34,23 @@
   margin-top: 3%;
   display: flex;
   justify-content: space-between;
-}
+}*/
 table{
+  font-size: 20px;
+  margin-top: 3%;
   width: 100%;
+  color: white;
+
+}
+table img{
+  width: 50px;
+  height: 50px;
 }
 tr{
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  height: 100px;
   width: 100%;
+  margin-bottom: 100px;
 }
 td{
   text-align: center;
@@ -45,12 +58,12 @@ td{
   table-layout: fixed;
   width: 25%;
 }
-/*.type{
-  margin-left: 5%;
+.car a{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: block;
 }
-.time{
-  margin-right: 5%;
-}*/
 .car h2{
   color: white;
 
