--- a/hackathon_2/styles/style.css
+++ b/hackathon_2/styles/style.css
@@ -77,7 +77,7 @@ nav{
   Main styles
 */
 main{
-  min-height:calc(100vh);
+  min-height:calc(100vh + 100px);
   background-color: rgb(60, 70, 80);
   position: relative;
 }
@@ -127,7 +127,7 @@ main{
 .informationBlock{
   position: relative;
   display: flex;
-  height: 500px;
+  height: 100%;
   justify-content: space-between;
 }
 .statistic{
@@ -203,6 +203,9 @@ main{
 .break:first-child{
   border-top: 1px solid white;
 }
+.break:last-child{
+  border-bottom: none;
+}
 .break{
   height: 100px;
   border-bottom: 1px solid white;
@@ -231,12 +234,14 @@ main{
 }
 .breaks{
   margin-top: 25%;
+  position: relative;
 }
 /*
   Footer styles
 */
 footer{
-  height:200px;
+  position: relative;
+  height:100px;
   background-color: rgb(50, 50, 60);
   color: white;
 }
